chage resource to states of USA

--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset='UTF-8'>
         <title>
-      Resources!
+      States!
     </title>
   </head>
-  <body data-ng-app='bearstream'> // this is a directive pre-fixed with data
+  <body data-ng-app='UnitedStates'>
     <main data-ng-controller='GreetingController'>
 
     <h1>Our Super App</h1>
-    <h2>{{greeting}}</h2> //tell angular to execute js code
+    <h2>{{greeting}}</h2>
 
     <input type='text' data-ng-model='greeting'>
     </main>
