--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,10 @@
     <h1>A United States Angular App</h1>
     <main data-ng-controller='StatesController' data-ng-init="getAll()">
       <ul id="errorslist">
-      <li data-ng-repeat="error in errors" ng-cloak>{{error}}</li>
+      <li data-ng-repeat="error in errors" data-ng-cloak>{{error}}</li>
     </ul>
 
-    <form name="newStateForm" data-ng-submit="create(newState)">
+    <form ng-cloak name="newStateForm" data-ng-submit="create(newState)">
       <h2>Add a State:</h2>
 
       <label for="newStateName">State:</label>
@@ -24,11 +24,12 @@
       <button type="submit" data-ng-disabled="newStateForm.$invalid">Submit New State</button>
     </form>
 
-    <ul id='statelist'>
+    <ul data-ng-cloak id='statelist'>
+        <h3 data-ng-if="states.length>0">States</h3>
         <li data-ng-repeat='state in states'>
-          {{state.name}} | {{state.city}}
+          <strong ng-cloak>{{state.name}}</strong> &nbsp;&nbsp;&nbsp;
 
-        <form name="stateForm{{state._id}}" data-ng-submit="update(state)" data-ng-if="state.editing">
+        <form data-ng-cloak name="stateForm{{state._id}}" data-ng-submit="update(state)" data-ng-if="state.editing">
           <h2 ng-cloak>Update {{state.name}}</h2>
 
           <label for="stateName{{state._id}}">State:</label>
@@ -38,10 +39,10 @@
           <input type="text" id="favoriteCity" data-ng-model="state.city">
 
           <button type="submit">Save Changes</button>
-          <button data-ng-click="state.editing = false">Cancel</button>
+          <button data-ng-click="cancel(state)">Cancel</button>
         </form>
 
-          <a href="" data-ng-if="!state.editing" data-ng-click="state.editing=true">edit</a>
+          <a href="" data-ng-click="edit(state)">edit</a>&nbsp;
 
           <a href="" data-ng-if="!state.editing" data-ng-click="remove(state)">delete</a>
         </li>
