--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/0.11.4/angular-material.css">
     <link rel="stylesheet" href="styles.min.css">
   </head>
-  <body data-ng-app='UnitedStatesApp'>  <!--this is a directive pre-fixed with 'data' telling everything contained within the body is angular-->
+  <body data-ng-app='UnitedStatesApp'>
 
   <div data-ng-controller="AuthController" data-ng-init="getUser()">
     <a data-ng-if="currentUser" href data-mg-click="logOut()">Log Out of {{currentUser}}</a>
